# es-view

./: .env  .env.example  .env.tauri  .gitignore  README.md  README.zh-CN.md  app.go  elasticsearch.go  eslint.config.js  go.mod  go.sum  helpers.go  index.html  main.go  multi-database-browsing-res.syso  mysql.go  package-lock.json  package.json  redis.go  test_wails.sh  vite.config.ts  wails.json  代码质量检测.md
backend/: app.go  app_lifecycle.go  app_state.go  elasticsearch.go  elasticsearch_module.go  helpers.go  modules.go  mysql.go  mysql_transfer.go  mysql_transfer_dump.go  mysql_transfer_service.go  mysql_transfer_sql.go  redis.go  state_store.go
backend/app/: app.go  lifecycle.go  proxy.go  state.go
backend/shared/: db.go  errors.go  errors_test.go  logger.go  value.go
docs/: design.md  documentation-improvement-plan.md  ipc-api.md  project-refactor-roadmap.md  project-refactor-task-breakdown.md
src/: App.css  App.tsx  index.css  index.html  main.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: es.rs  main.rs  mysql.rs  redis.rs
src/components/: ErrorBoundary.tsx  ErrorLogModal.tsx  FieldFilterButton.tsx
src/hooks/: useConnectionWorkspace.ts  useFloatingMenuDismiss.ts  useVirtualTable.ts
src/i18n/: config.ts
src/layout/: FloatingMenu.tsx  WorkspaceChrome.tsx
src/lib/: binaryValue.ts  composeProviders.tsx  errorLog.ts  esView.ts  routeEngine.ts  storage.ts  types.ts  wailsapi.ts
tasks/: decouple-content-area.md  es-backend-refactor-plan.md  improvement-plan.md
(+259 files in other folders)
